--- a/package.json
+++ b/package.json
@@ -1,40 +1,44 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbo",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@radix-ui/react-aspect-ratio": "^1.0.3",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@tabler/icons-react": "^2.47.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "embla-carousel-autoplay": "^8.0.0",
-    "embla-carousel-react": "^8.0.0",
-    "lucide-react": "^0.352.0",
-    "next": "14.1.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
-  }
+	"name": "frontend",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbo",
+		"build": "next build",
+		"start": "next start",
+		"lint": "biome check .",
+		"lint:fix": "biome check . --apply",
+		"format": "biome format . --write",
+		"check": "biome check ."
+	},
+	"dependencies": {
+		"@radix-ui/react-aspect-ratio": "^1.1.7",
+		"@radix-ui/react-dialog": "^1.1.15",
+		"@radix-ui/react-dropdown-menu": "^2.1.16",
+		"@radix-ui/react-navigation-menu": "^1.2.14",
+		"@radix-ui/react-slot": "^1.2.3",
+		"@tabler/icons-react": "3.35.0",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.0",
+		"embla-carousel-autoplay": "^8.0.0",
+		"embla-carousel-react": "^8.0.0",
+		"lucide-react": "0.544.0",
+		"next": "15.5.3",
+		"react": "19.1.1",
+		"react-dom": "19.1.1",
+		"tailwind-merge": "3.3.1",
+		"tailwindcss-animate": "^1.0.7"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^2.2.4",
+		"@tailwindcss/postcss": "^4.1.13",
+		"@types/node": "24.5.2",
+		"@types/react": "19.1.13",
+		"@types/react-dom": "19.1.9",
+		"autoprefixer": "^10.4.21",
+		"babel-plugin-react-compiler": "^19.1.0-rc.3",
+		"postcss": "^8.5.6",
+		"tailwindcss": "4.1.13",
+		"typescript": "^5"
+	}
 }
