--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "frontend",
 	"version": "0.1.0",
 	"private": true,
+	"type": "module",
 	"scripts": {
 		"dev": "next dev --turbo",
 		"build": "next build",
@@ -16,18 +17,25 @@
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
 		"@radix-ui/react-navigation-menu": "^1.2.14",
+		"@radix-ui/react-separator": "^1.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@tabler/icons-react": "3.35.0",
-		"class-variance-authority": "^0.7.0",
-		"clsx": "^2.1.0",
+		"@types/uuid": "^11.0.0",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
 		"embla-carousel-autoplay": "^8.0.0",
 		"embla-carousel-react": "^8.0.0",
-		"lucide-react": "0.544.0",
+		"lucide-react": "^0.544.0",
 		"next": "15.5.3",
+		"next-themes": "^0.4.6",
 		"react": "19.1.1",
 		"react-dom": "19.1.1",
-		"tailwind-merge": "3.3.1",
-		"tailwindcss-animate": "^1.0.7"
+		"sonner": "^2.0.7",
+		"tailwind-merge": "^3.3.1",
+		"tailwindcss-animate": "^1.0.7",
+		"uuid": "^13.0.0",
+		"vaul": "^1.1.2",
+		"zustand": "^5.0.8"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.2.4",
@@ -38,7 +46,9 @@
 		"autoprefixer": "^10.4.21",
 		"babel-plugin-react-compiler": "^19.1.0-rc.3",
 		"postcss": "^8.5.6",
+		"shadcn": "^3.3.1",
 		"tailwindcss": "4.1.13",
+		"tw-animate-css": "^1.3.8",
 		"typescript": "^5"
 	}
 }
