--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-aspect-ratio": "^1.1.7",
+		"@radix-ui/react-checkbox": "^1.3.3",
+		"@radix-ui/react-collapsible": "^1.1.12",
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
 		"@radix-ui/react-navigation-menu": "^1.2.14",
 		"@radix-ui/react-separator": "^1.1.7",
+		"@radix-ui/react-slider": "^1.3.6",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@tabler/icons-react": "3.35.0",
 		"@types/uuid": "^11.0.0",
